# CATS-API

./: README.md  setup.cfg
backend/: Dockerfile  entrypoint.sh  pyproject.toml  requirements.txt
backend/cats_api/: pytest.ini
backend/cats_api/api/: filters.py  permissions.py  serializers.py  urls.py  validators.py  views.py
backend/cats_api/cats/: apps.py  constants.py  models.py  validators.py
backend/cats_api/cats/migrations/: 0001_initial.py  0002_alter_breed_name_alter_cat_name_and_more.py  0003_alter_breed_options.py  0004_alter_cat_options_score.py
backend/cats_api/cats/signals/: handlers.py
backend/cats_api/cats_api/: asgi.py  settings.py  urls.py  wsgi.py
backend/cats_api/core/: csv_loaders.py
backend/cats_api/core/management/commands/: create_default_breeds_records.py  create_default_colors_records.py  load_test_data_from_csv.py
backend/cats_api/default_data/: breeds.csv  colors.csv
backend/cats_api/tests/: api_test.py  auth_test.py  conftest.py  test_utils.py
backend/cats_api/tests/test_data/: breeds.csv  cats.csv  colors.csv  users.csv
gateway/: nginx.conf
infra/: docker-compose.yml
